--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ certifi==2020.4.5.1
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==3.0.5
+django-cors-headers==3.3.0
 djangorestframework==3.11.0
+gunicorn==20.0.4
 httpie==2.1.0
 idna==2.9
 psycopg2==2.8.5
@@ -13,4 +15,3 @@ pytz==2019.3
 requests==2.23.0
 sqlparse==0.3.1
 urllib3==1.25.9
-gunicorn==19.6.0
